[package]
name = "mlir_calculator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
logos = "0.15.0"
#llvm-sys = "191.0.0"
#melior = { version = "=0.19.0", features = ["ods-dialects"] }
